; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-pfsync.c_pfsync_print_state.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-pfsync.c_pfsync_print_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pfsync_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @pfsync_print_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pfsync_print_state(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.pfsync_state*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.pfsync_state*
  store %struct.pfsync_state* %7, %struct.pfsync_state** %5, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @safeputchar(i32* %8, i8 signext 10)
  %10 = load i32*, i32** %3, align 8
  %11 = load %struct.pfsync_state*, %struct.pfsync_state** %5, align 8
  %12 = call i32 @print_state(i32* %10, %struct.pfsync_state* %11)
  ret void
}

declare dso_local i32 @safeputchar(i32*, i8 signext) #1

declare dso_local i32 @print_state(i32*, %struct.pfsync_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
